--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -16,6 +16,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.19.6-alpine
+        image: nginx:1.19.6
         ports:
         - containerPort: 80
