--- a/nginx-deployment.yaml
+++ b/nginx-deployment.yaml
@@ -19,3 +19,16 @@ spec:
         image: nginx:1.19.6
         ports:
         - containerPort: 80
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx
+  labels:
+    app: nginx
+spec:
+  ports:
+  - port: 80
+    protocol: TCP
+  selector:
+    app: nginx
